index css fixed

--- a/app/views/admin/login.scala.html
+++ b/app/views/admin/login.scala.html
@@ -5,7 +5,7 @@
 
 			<div class="row-fluid">
 				<div class="span12 center">
-					<img src="img/logo_baasbox_lp.png" />
+					<img src="img/logo_new_black.png" />
 				</div>
 				<div class="span12 center login-header">
 					<h2>v.@version @edition<br>Admin Console</h2>
