--- a/app/views/admin/main_/topbar.scala.html
+++ b/app/views/admin/main_/topbar.scala.html
@@ -3,6 +3,7 @@
 
 	@admin.main_.pwdmanagement_.changepwd()
 
+
 	<div class="navbar">
 		<div class="navbar-inner">
 			<div class="container-fluid">
@@ -11,7 +12,45 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
-				
+
+				<div class="mainmenu">
+				        <div class="menuwrapper">
+
+				            <nav class="menulist">
+			                <span class="border_active"></span>
+
+				                <ul class="items">
+			                    <li id="menu-item-278" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-6"><a href="http://vccw.dev/">Home</a></li>
+			                    <li id="menu-item-147" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-147"><a href="http://vccw.dev/features">Features</a></li>
+			                    <li id="menu-item-148" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-148 current_page_item menu-item"><a href="http://vccw.dev/docs">Docs</a></li>
+			                    <li id="menu-item-149" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-149"><a href="http://vccw.dev/community">Community</a></li>
+			                    <li id="menu-item-150" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-150"><a href="http://vccw.dev/downloads">Downloads</a></li>
+			                    <li id="menu-item-151" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-151"><a href="http://vccw.dev/blog">Blog</a></li>
+
+
+				</ul>            </nav>
+				            <a class="logoblock" href="http://www.baasbox.com/#home">
+				                        	            		<img class="companylogo" src="/console/img/logo_new_black.png">
+																									<span id="currentVersion">v. @version @edition</span>
+				            	                        </a>
+
+				            							<div class="socialblock">
+				                            </div>
+
+																		<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+																		<i class="icon-user"></i><span class="hidden-phone"><span id="username"></span></span>
+																		<span class="caret"></span>
+																		</a>
+																		<ul data-rel="tooltip" title="You profile" class="dropdown-menu">
+																			<li><a href="#" class="btn-changepwd">Change Password</a></li>
+																			<li class="divider"></li>
+																			<li><a class="logout" href="#">Logout</a></li>
+																		</ul>
+																	</div>
+				        </div>
+				    </div>
+
+				<!---
 				<div class="mainmenu">
 	        		<div class="menuwrapper">
 	           			 <nav class="menulist">
@@ -20,13 +59,13 @@
 									<li><a href="http://support.baasbox.com" target="_blank" title="Support">Support</a></li>
 									<li><a href="http://www.baasbox.com/version/help/doc/@(version.toLowerCase().replaceAll("-snapshot",""))"" target="_blank" title="Api Reference">Api Reference</a></li>
 									<li><a href="http://www.baasbox.com/tutorial" target="_blank" title="Tutorial">Tutorial</a></li>
-								</ul> 
-												           
+								</ul>
+
 						</nav>
-						<!-- user dropdown starts -->
-						<div class="btn-group pull-right" >						
+
+						<div class="btn-group pull-right" >
 							<span id="currentVersion">v. @version @edition</span>
-						
+
 							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 							<i class="icon-user"></i><span class="hidden-phone"><span id="username"></span></span>
 							<span class="caret"></span>
@@ -37,12 +76,14 @@
 								<li><a class="logout" href="#">Logout</a></li>
 							</ul>
 						</div>
-						<!-- user dropdown ends --> 	
+
 						<a class="brand" href="http://www.baasbox.com/#home">
 	                    <img class="companylogo" src="img/logo_baasbox_white.png">
-	            	                        </a>  
+	            	                        </a>
 	            	</div>
 	            </div>
+
+						-->
 			</div>
 		</div>
 	</div>
