--- a/public/console/css/baasbox.css
+++ b/public/console/css/baasbox.css
@@ -29,11 +29,45 @@
 .nav-tabs li.active:first-child a{
   border-left:0px;
 }
+.navbar .btn, .navbar .btn-group {
+    margin-top: -56px;
+    margin-left: 95%;
+}
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    z-index: 1000;
+    right: 0;
+    display: none;
+    float: left;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    list-style: none;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+}
 
 #currentVersion{
 	font-size:13px;
+  font-family: 'Open Sans', sans-serif;
 	padding-right:20px;
-	color:rgb(14, 15, 15);
+  color: #fff;
+  position: absolute;
+  width: 200px;
+  text-align: center;
+  margin-top: 72px;
+  margin-left: -137px;
 }
 
 #dbmanager .actions{
@@ -120,21 +154,6 @@ div.setting button.upload {
 .box-header > h2 {
     margin: 0;
 }
-.navbar-inner {
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    background-image: none;
-    max-height:62px !important;
-}
-.navbar .brand, .navbar .nav > li > a {
-    color: #2e2727;
-    height:40px;
-    width:228px;
-}
 .sidebar-nav {
 
 }
@@ -151,6 +170,9 @@ div.setting button.upload {
 	font-size: 13px;
 }
 
+.navbar {
+  margin-bottom:50px;
+}
 
 /*a {*/
     /*text-decoration: none;*/
@@ -253,50 +275,39 @@ nav {
 }
 
 .mainmenu {
-    background-color: #538378;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+    background-color:#192226 !important;
+    border-bottom:3px white solid;
     left: 0;
-    height: 73px;
+    height: 101px;
     position: fixed;
     text-align: center;
     width: 100%;
     z-index: 1000;
-    margin-top:-6px !important;
+    margin-top:-5px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .mainmenu .menuwrapper .menulist ul li a {
-  color: #fff;
-  display: inline-block;
-  padding: 0.6em 1em;
-  margin: 0 0.5em;
-  border-radius: 4px;
-  text-transform: uppercase;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  text-decoration:none;
-  font-family:Lato-Regular, sans-serif !important;
-  font-size:17px;
-  margin-top:8px;
-}
-.mainmenu .menuwrapper .menulist ul li a:hover {
-  background: rgba(0, 0, 0, 0.2);
-}
-.mainmenu .menuwrapper .menulist ul li a:active {
-  background: rgba(255, 255, 255, 0.2);
-}
+  position:relative;
+	margin-left:16px;
+	margin-top:0px;
+	display: inline-block;
+    font-family: 'Open Sans', sans-serif;
+	font-size: 21px;
+	color:#fff;
+  text-decoration: none;
 
+}
 .mainmenu .menuwrapper .menulist ul li {
 	float: left;
-    list-style: none outside none;
+  list-style: none outside none;
+
 }
 
 .mainmenu .menuwrapper .menulist {
     text-align: center;
-    margin-right:250px;
+    margin-right:66px;
+    margin-top:50px;
     float:right;
     display: inline-block;
     padding: 0.5em 1em;
@@ -304,40 +315,42 @@ nav {
     text-align: center;
 }
 
+.border_active {
+  padding-bottom: 5px;
+  width: 0%;
+  height: 5px;
+  margin-left: -5px;
+  margin-left: 13px;
+  bottom: -15px;
+  background-color: #ff5368;
+  position: absolute;
+  transition: all ease-out 300ms;
+}
+
 .mainmenu .menuwrapper .logoblock {
     display: inline-block;
     left: 0;
     padding: 0.8em 1em;
     position: absolute;
+    height:80px;
 }
 .mainmenu .menuwrapper .logoblock .companylogo {
-  max-height: 40px;
+  max-height: 79px;
+  margin-top:24px;
   opacity: 1;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  margin-left:40px;
-  margin-top:3px;
+  margin-left:-16px;
 }
-.mainmenu .menuwrapper .logoblock .companylogo:hover {
-  opacity: 0.7;
-}
+
 
 .leftbar-menu {
 	margin-left:-20px !important;
 	margin-top:-6px !important;
 	border:none !important;
-}
-
-.navbar-inner {
-	background-color:#538378 !important;
-}
-
-.navbar .btn, .navbar .btn-group {
-	margin-top:20px;
-	margin-right:-755px;
 }
 
 .deleteExport{
@@ -356,24 +369,6 @@ nav {
 	background-color: #F2F2F2;
 }
 
-.nav-tabs.nav-stacked > li > a {
-	border:none !important;
-}
-
-.nav.nav-tabs.nav-stacked.main-menu > li > a {
-	color:#000000 !important;
-}
-
-.nav-tabs.nav-stacked.main-menu > .active > a {
-	background-color:#999999 !important;
-}
-
-img.companylogo {
-	height:40px;
-	width:228px;
-	margin-top:-1px;
-	margin-left:53px;
-}
 
 .logLine {
     line-height: 12px;
