--- a/public/console/css/bootstrap-classic.css
+++ b/public/console/css/bootstrap-classic.css
@@ -2414,7 +2414,7 @@ table th[class*="span"],
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  right: 0;
   z-index: 1000;
   display: none;
   float: left;
