changed CSS color

--- a/app/views/admin/main_/topbar.scala.html
+++ b/app/views/admin/main_/topbar.scala.html
@@ -29,7 +29,7 @@
 
 
 				</ul>            </nav>
-				            <a class="logoblock" href="http://www.baasbox.com/#home">
+				            <a class="logoblock" href="#dashboard">
 				                        	            		<img class="companylogo" src="/console/img/logo_new_black.png">
 																									<span id="currentVersion">v. @version @edition</span>
 				            	                        </a>
@@ -48,7 +48,7 @@
 																		</ul>
 																	</div>
 				        </div>
-				  
+
 
 				<!---
 				<div class="mainmenu">
