--- a/public/console/css/bootstrap-classic.css
+++ b/public/console/css/bootstrap-classic.css
@@ -205,16 +205,16 @@ body {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  color: #8a968f;
+  color: #9b9b9b;
   background-color: #ffffff;
 }
 a {
-  color: #538378;
+  color: #192226;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #35544d;
+  color: #9b9b9b;
   text-decoration: underline;
 }
 .img-rounded {
@@ -617,7 +617,7 @@ h6 {
   font-family: 'Lato', sans-serif;
   font-weight: bold;
   line-height: 18px;
-  color: #538378;
+  color: #192226;
   text-rendering: optimizelegibility;
 }
 h1 small,
@@ -917,7 +917,7 @@ input[type="color"],
   margin-bottom: 9px;
   font-size: 13px;
   line-height: 18px;
-  color: #8a968f;
+  color: #9b9b9b;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -3440,7 +3440,8 @@ input[type="submit"].btn.btn-mini {
 .nav-tabs > .active > a,
 .nav-tabs > .active > a:hover,
 .nav-tabs > .active > a:focus {
-  color: #8a968f;
+  color: #192226;
+  font-weight: bold;
   background-color: #ffffff;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
@@ -3520,8 +3521,8 @@ input[type="submit"].btn.btn-mini {
   border-bottom-color: #fff;
 }
 .nav-tabs .active .dropdown-toggle .caret {
-  border-top-color: #8a968f;
-  border-bottom-color: #8a968f;
+  border-top-color: #9b9b9b;
+  border-bottom-color: #9b9b9b;
 }
 .nav > .dropdown.active > a:hover,
 .nav > .dropdown.active > a:focus {
@@ -4722,7 +4723,7 @@ a.thumbnail:focus {
 }
 .thumbnail .caption {
   padding: 9px;
-  color: #8a968f;
+  color: #9b9b9b;
 }
 .media,
 .media-body {
@@ -5242,7 +5243,7 @@ a.badge:focus {
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 }
 .navbar-inverse .navbar-search .search-query {
-  color: #8a968f;
+  color: #9b9b9b;
 }
 @media (max-width: 979px) {
   .navbar .nav-collapse .nav li > a {
@@ -5310,17 +5311,17 @@ div.subnav-fixed {
 .btn-primary {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #598c81;
-  background-image: -moz-linear-gradient(top, #5d9386, #538378);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5d9386), to(#538378));
-  background-image: -webkit-linear-gradient(top, #5d9386, #538378);
-  background-image: -o-linear-gradient(top, #5d9386, #538378);
-  background-image: linear-gradient(to bottom, #5d9386, #538378);
+  background-color: #929292;
+  background-image: -moz-linear-gradient(top, #8c8c8c, #7b7b7b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#8c8c8c), to(#7b7b7b));
+  background-image: -webkit-linear-gradient(top, #8c8c8c, #7b7b7b);
+  background-image: -o-linear-gradient(top, #8c8c8c, #7b7b7b);
+  background-image: linear-gradient(to bottom, #8c8c8c, #7b7b7b);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5d9386', endColorstr='#ff538378', GradientType=0);
-  border-color: #538378 #538378 #35544d;
+  border-color: #192226 #192226 #192226;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  *background-color: #538378;
+  *background-color: #929292;
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
@@ -5331,12 +5332,11 @@ div.subnav-fixed {
 .btn-primary.disabled,
 .btn-primary[disabled] {
   color: #ffffff;
-  background-color: #538378;
-  *background-color: #49736a;
+
 }
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #3f645b \9;
+  background-color: #080b0c \9;
 }
 .btn-info {
   color: #ffffff;
