--- a/public/console/css/charisma-app.css
+++ b/public/console/css/charisma-app.css
@@ -47,19 +47,19 @@ height: 16px;
 padding: 0 5px;
 font-family: Arial, sans-serif;
 color: white !important;
-text-shadow: 0 1px 
+text-shadow: 0 1px
 hsla(0, 0%, 0%, 0.25);
 border-width: 1px;
 border-style: solid;
 border-radius: 10px;
 -webkit-border-radius: 10px;
 -moz-border-radius: 10px;
--webkit-box-shadow: 0 1px 1px 
-hsla(0, 0%, 0%, 0.08), inset 0 1px 
+-webkit-box-shadow: 0 1px 1px
+hsla(0, 0%, 0%, 0.08), inset 0 1px
 hsla(0, 100%, 100%, 0.3);
 -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), inset 0 1px rgba(255, 255, 255, 0.3);
-box-shadow: 0 1px 1px 
-hsla(0, 0%, 0%, 0.08), inset 0 1px 
+box-shadow: 0 1px 1px
+hsla(0, 0%, 0%, 0.08), inset 0 1px
 hsla(0, 100%, 100%, 0.3);
 }
 
@@ -129,7 +129,7 @@ border: 1px solid #DEDEDE;
 border-radius:3px;
 -webkit-border-radius:3px;
 -moz-border-radius:3px;
-margin-top: 10px; 
+margin-top: 10px;
 margin-bottom: 10px ;
 box-shadow: 0 0 10px rgba(189, 189, 189, 0.4);
 -webkit-box-shadow: 0 0 10px rgba(189, 189, 189, 0.4);
@@ -362,7 +362,7 @@ margin-bottom:0;
 }
 @media (min-width: 768px) and (max-width: 979px) {
 .box-icon{
-	display:none;	
+	display:none;
 }
 .box-header h2{
 	font-size:13px !important;
@@ -383,8 +383,8 @@ margin-left:10px;
 border-radius:0 0 10px 10px;
 -webkit-border-radius:0 0 10px 10px;
 -moz-border-radius:0 0 10px 10px;
-padding-top:5px; 
-padding-bottom:5px; 
+padding-top:5px;
+padding-bottom:5px;
 }
 div.dataTables_length select {
 width: 77px;
@@ -458,13 +458,13 @@ float:right !important;
 margin-top:3px;
 }
 .green {
-color: #458746;
+color: #192226;
 }
 .red {
 color: #B94846;
 }
 .blue {
-color: #3986AC;
+color: #ff5368;
 }
 .yellow {
 color: #F99406;
