--- a/app/views/admin/main_/topbar.scala.html
+++ b/app/views/admin/main_/topbar.scala.html
@@ -15,7 +15,7 @@
 
 				<div class="mainmenu">
 				        <div class="menuwrapper">
-
+<div class="listmenu">
 				            <nav class="menulist">
 			                <span class="border_active"></span>
 
@@ -29,11 +29,12 @@
 
 
 				</ul>            </nav>
+			</div>
 				            <a class="logoblock" href="#dashboard">
 				                        	            		<img class="companylogo" src="/console/img/logo_new_black.png">
 																									<span id="currentVersion">v. @version @edition</span>
 				            	                        </a>
-
+<div class="user">
 				            							<div class="socialblock">
 				                            </div>
 
@@ -47,6 +48,7 @@
 																			<li><a class="logout" href="#">Logout</a></li>
 																		</ul>
 																	</div>
+																</div>
 				        </div>
 
 
