--- a/public/console/css/baasbox.css
+++ b/public/console/css/baasbox.css
@@ -259,7 +259,7 @@ nav {
     text-align: center;
     width: 100%;
     z-index: 1000;
-    margin-top:-5px;
+    margin-top:-6px;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -328,7 +328,14 @@ nav {
 	margin-top:-6px !important;
 	border:none !important;
 }
-
+@media (max-width: 767px) {
+  .leftbar-menu {
+    margin-left: 0px !important;
+    margin-top:10px !important;
+    margin-bottom:20px;
+    text-align: center;
+  }
+}
 .deleteExport{
 	margin-right:0px !important;
 }
