--- a/public/console/css/bootstrap-responsive.css
+++ b/public/console/css/bootstrap-responsive.css
@@ -136,6 +136,7 @@
 }
 
 @media (max-width: 767px) {
+
   body {
     padding-right: 20px;
     padding-left: 20px;
@@ -196,9 +197,11 @@
     display: inline-block;
     width: auto;
   }
+
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
+
   .row {
     margin-left: -20px;
     *zoom: 1;
@@ -683,6 +686,11 @@
   body {
     padding-top: 0;
   }
+.hidden-tablet {display:none}
+.leftbar-menu li {
+  float:left;
+}
+
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     position: static;
@@ -709,6 +717,12 @@
   .nav-collapse {
     clear: both;
   }
+.nav-collapse .nav {
+  width: 100%;
+  margin:0 auto;
+}
+
+  /*
   .nav-collapse .nav {
     float: none;
     margin: 0 0 9px;
@@ -735,13 +749,7 @@
        -moz-border-radius: 3px;
             border-radius: 3px;
   }
-  .nav-collapse .btn {
-    padding: 4px 10px 4px;
-    font-weight: normal;
-    -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-            border-radius: 4px;
-  }
+
   .nav-collapse .dropdown-menu li + li a {
     margin-bottom: 2px;
   }
@@ -749,14 +757,11 @@
   .nav-collapse .dropdown-menu a:hover {
     background-color: #222222;
   }
-  .nav-collapse.in .btn-group {
-    padding: 0;
-    margin-top: 5px;
-  }
+
   .nav-collapse .dropdown-menu {
     position: static;
     top: auto;
-    left: auto;
+    right: 0;
     display: block;
     float: none;
     max-width: none;
@@ -798,13 +803,15 @@
     height: 0;
     overflow: hidden;
   }
-  .navbar .btn-navbar {
-    display: block;
-  }
+  */
+
   .navbar-static .navbar-inner {
     padding-right: 10px;
     padding-left: 10px;
   }
+}
+
+@media (min-width: 1023px) {
 }
 
 @media (min-width: 768px) {
