--- a/public/console/css/charisma-app.css
+++ b/public/console/css/charisma-app.css
@@ -351,7 +351,10 @@ margin-right:5px;
 .brand span{
 float:left;
 }
-@media (max-width: 979px){
+@media (max-width: 979px) {
+
+.listmenu {display: none}
+
 .sidebar-nav{
 padding:0;
 margin-bottom:0;
@@ -361,6 +364,7 @@ margin-bottom:0;
 }
 }
 @media (min-width: 768px) and (max-width: 979px) {
+
 .box-icon{
 	display:none;
 }
