--- a/app/views/admin/main_/topbar.scala.html
+++ b/app/views/admin/main_/topbar.scala.html
@@ -15,6 +15,7 @@
 
 				<div class="mainmenu">
 				        <div class="menuwrapper">
+										<div class="menutoggle"></div>
 <div class="listmenu">
 				            <nav class="menulist">
 			                <span class="border_active"></span>
@@ -30,10 +31,12 @@
 
 				</ul>            </nav>
 			</div>
-				            <a class="logoblock" href="#dashboard">
+				            <span class="logoblock" >
+
 				                        	            		<img class="companylogo" src="/console/img/logo_new_black.png">
 																									<span id="currentVersion">v. @version @edition</span>
-				            	                        </a>
+
+				            	                        </span>
 <div class="user">
 				            							<div class="socialblock">
 				                            </div>
@@ -51,41 +54,6 @@
 																</div>
 				        </div>
 
-
-				<!---
-				<div class="mainmenu">
-	        		<div class="menuwrapper">
-	           			 <nav class="menulist">
-	                			<ul class="items">
-									<li><a href="http://www.baasbox.com/download" target="_blank" title="Download">Download</a></li>
-									<li><a href="http://support.baasbox.com" target="_blank" title="Support">Support</a></li>
-									<li><a href="http://www.baasbox.com/version/help/doc/@(version.toLowerCase().replaceAll("-snapshot",""))"" target="_blank" title="Api Reference">Api Reference</a></li>
-									<li><a href="http://www.baasbox.com/tutorial" target="_blank" title="Tutorial">Tutorial</a></li>
-								</ul>
-
-						</nav>
-
-						<div class="btn-group pull-right" >
-							<span id="currentVersion">v. @version @edition</span>
-
-							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-							<i class="icon-user"></i><span class="hidden-phone"><span id="username"></span></span>
-							<span class="caret"></span>
-							</a>
-							<ul data-rel="tooltip" title="You profile" class="dropdown-menu">
-								<li><a href="#" class="btn-changepwd">Change Password</a></li>
-								<li class="divider"></li>
-								<li><a class="logout" href="#">Logout</a></li>
-							</ul>
-						</div>
-
-						<a class="brand" href="http://www.baasbox.com/#home">
-	                    <img class="companylogo" src="img/logo_baasbox_white.png">
-	            	                        </a>
-	            	</div>
-	            </div>
-
-						-->
 			</div>
 		</div>
 	</div>
