fixed bug black screen with keyboard (mobile)

--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -82,8 +82,8 @@ $(".border_active").css("width", "0" + "px").css("left", "0"+"px");
 			});
 
 			$('.left-menu-item').click(function() {
-				$('.leftbar-menu').toggleClass('open_menu');
-				$('.black-screen').toggleClass('black-screen-active');
+				$('.leftbar-menu').removeClass('open_menu');
+				$('.black-screen').removeClass('black-screen-active');
 
 			});
 
