--- a/app/views/admin/main_/topbar.scala.html
+++ b/app/views/admin/main_/topbar.scala.html
@@ -21,12 +21,12 @@
 			                <span class="border_active"></span>
 
 				                <ul class="items">
-			                    <li id="menu-item-278" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-6"><a href="http://vccw.dev/">Home</a></li>
-			                    <li id="menu-item-147" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-147"><a href="http://vccw.dev/features">Features</a></li>
-			                    <li id="menu-item-148" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-148 current_page_item menu-item"><a href="http://vccw.dev/docs">Docs</a></li>
-			                    <li id="menu-item-149" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-149"><a href="http://vccw.dev/community">Community</a></li>
-			                    <li id="menu-item-150" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-150"><a href="http://vccw.dev/downloads">Downloads</a></li>
-			                    <li id="menu-item-151" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-151"><a href="http://vccw.dev/blog">Blog</a></li>
+	
+			                    <li id="menu-item-278" class="menu-item"><a href="http://www.baasbox.com/download" target="blank">Download</a></li>
+			                    <li id="menu-item-147" class="menu-item"><a href="http://support.baasbox.com/" target="blank">Support</a></li>
+			                    <li id="menu-item-148" class="menu-item"><a href="http://www.baasbox.com/version/help/doc/0.9.5" target="blank">API Reference</a></li>
+			                    <li id="menu-item-149" class="menu-item"><a href="http://www.baasbox.com/tutorial" target="blank">Tutorial</a></li>
+
 
 
 				</ul>            </nav>
